# copilot-tools

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: weather-agent.md
.github/hooks/: session-hooks.json
.github/instructions/: agents.instructions.md  hooks.instructions.md  mcp.instructions.md  python.instructions.md  skills.instructions.md
.github/skills/: SKILL_GUIDELINES.md
.github/skills/monthly-report/: SKILL.md
.github/skills/monthly-report/references/: REFERENCE.md
.github/skills/note-management/: SKILL.md
.github/skills/note-management/references/: REFERENCE.md
.github/skills/skill-creator/: SKILL.md
.github/skills/video-to-markdown/: SKILL.md
.github/skills/video-to-markdown/references/: REFERENCE.md
.github/skills/video-to-markdown/scripts/: video_to_markdown.py
.github/skills/weather-query/: SKILL.md
.github/skills/weather-query/references/: REFERENCE.md
.github/skills/weather-query/scripts/: weather.py
config/: mcp-config.example.json
docs/: agent-skills-guide.md  skills-explained-summary.md
docs/video-to-markdown/: 10分钟弄懂 什么是大模型Skill.md
logs/: README.md
scripts/: log-prompt.ps1  log-prompt.sh  post-tool-log.ps1  post-tool-log.sh  pre-tool-check.ps1  pre-tool-check.sh
tmp/: .gitkeep
