[project]
name = "copilot-tools"
version = "1.0.0"
description = "基于 GitHub Copilot CLI 的日常生活和工作辅助工具集"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Copilot Tools" }
]
keywords = ["copilot", "cli", "weather", "tools"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
video = [
    "yt-dlp>=2024.0.0",
    "openai-whisper>=20231117",
]

[project.scripts]
weather = "scripts.weather:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
